--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ hs_err_pid*
 
 src/main/java/com/tallerwebi/config/HibernateConfig.java
 
+src/main/webapp/resources/core/img/publicaciones/2024-06-25T17-24-55-894807100_SAM_0002.JPG
